# student_blogs

./: .gitignore  build.sh  manage.py  pyproject.toml
accounts/: authentication.py  urls.py  views.py
accounts/migrations/: 0001_alter_site.py
database_search_engine/: asgi.py  settings.py  urls.py  wsgi.py
indexes/: admin.py  apps.py  models.py  tests.py  utils.py
indexes/migrations/: 0001_initial.py  0002_alter_word_content_alter_textword_unique_together.py  0002_texttoken_token_texttoken_token_and_more.py  0003_alter_texttoken_unique_together.py  0003_fill_tokens.py  0003_fill_whole_tokens.py  0004_remove_word_texts_delete_textword_delete_word.py  0005_bigram.py  0006_trigram.py
main/: admin.py  apps.py  forms.py  middlewares.py  models.py  tests.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_author_options_alter_blog_options_and_more.py  0002_fill_data.py  0003_alter_text_sex_alter_text_student_number_and_more.py  0004_create_admin.py  0005_alter_text_city_alter_text_level_alter_text_school_and_more.py  0006_alter_text_city_alter_text_level_alter_text_school_and_more.py  0007_alter_text_student_number.py  0008_text_author_name_text_source_type.py  0009_alter_text_sex_alter_text_type.py  0010_text_words_indexed.py  0011_alter_text_sex_alter_text_type.py  0012_functionalword.py  0013_alter_text_author_name_alter_text_source_type.py  0014_announcement.py  0015_dictionarydefinition.py  0016_fill_dictionary.py  0017_text_bigrams_indexed.py  0018_text_trigrams_indexed.py  0019_suffix_prefix.py  0020_fill_affixes.py  (+3 more)
(+103 files in other folders)
