[tool.poetry]
name = "student_blogs_search_engine"
version = "0.27.1"
description = ""
authors = ["Hamza <hamza.abbad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-taggit = "^5.0.1"
mysqlclient = "^2.2.4"
pyarabic = "^0.6.15"
python-decouple = "^3.8"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
uvicorn = "^0.28.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-read-only = "^1.15.0"
django-debug-toolbar = "^4.3.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
python-lorem = "^1.3.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
